examples/negative/parse_errors/L1/reserved_else.ob
MODULE Reserved;

VAR ELSE: INTEGER;

END Reserved.
